# GK_OBS_LITE_AMD

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  build.bat  installer.iss  setup_youtube_credentials.bat
UI/: amd-gpu-info.cpp  amd-gpu-info.hpp  auth-youtube.cpp  obs-app.cpp  update-lite-amd.cpp  update-lite-amd.hpp  window-basic-auto-config-test.cpp  window-basic-auto-config.cpp  window-basic-main-outputs.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-settings-stream.cpp  window-basic-settings.cpp  window-basic-status-bar.cpp
UI/cmake/: ui-windows.cmake
UI/data/locale/: en-US.ini
UI/forms/: OBSBasic.ui  OBSBasicSettings.ui
UI/frontend-plugins/: CMakeLists.txt
cmake/windows/: compilerconfig.cmake
installer_assets/: LICENSE.txt
libobs/: obs-internal.h  obs-source.c  obs-video.c  obs.c  obs.h
plugins/: CMakeLists.txt
plugins/obs-ffmpeg/: texture-amf.cpp
